tests/fixtures/errors/invalid_unclosed.puml
@startuml
Alice and Bob chat
